@@ -1,5 +1,6 @@
 package com.vivoninc.core;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -7,7 +8,6 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 @Configuration
 public class CorsConfig {
@@ -16,25 +16,37 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        configuration.setAllowedOrigins(
-            List.of("https://vivon-app.onrender.com", 
-                    "http://localhost:5173", 
-                    "http://localhost:3000")
-        );
+        // Allow specific origins
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+            "https://vivon-app.onrender.com",
+            "http://localhost:5173",
+            "http://localhost:3000"
+        ));
         
-        configuration.setAllowedMethods(
-            List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD")
-        );
+        // Allow all methods
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"
+        ));
         
-        configuration.setAllowedHeaders(
-            List.of("*")
-        );
+        // Allow all headers
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         
+        // Expose headers that the frontend might need
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization", "Content-Type", "X-Requested-With", "accept", "Origin", 
+            "Access-Control-Request-Method", "Access-Control-Request-Headers"
+        ));
+        
+        // Allow credentials
         configuration.setAllowCredentials(true);
+        
+        // Cache preflight response for 1 hour
         configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
+        System.out.println("CORS Configuration loaded with origins: " + configuration.getAllowedOriginPatterns());
         
         return source;
     }
